# smartfood

./: README.md  docker-compose.yml  generate_data.py  meal_prediction_models.py  requirements.txt
backend-api/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  meal_counts.csv  pyproject.toml  requirements.txt
backend-api/actions/: ai_model.py  new_action.py  response_model.py
backend-api/actions/models/: dinner_meals_xg.pkl
nextjs/: .dockerignore  Dockerfile  README.md  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/app/contact/: page.tsx
nextjs/src/app/dashboard/: layout.tsx  page.tsx
nextjs/src/app/dashboard/calls/: columns.tsx  data-table-toolbar.tsx  data-table.tsx  (+2 more)
nextjs/src/components/: icons.tsx
nextjs/src/components/layout/: features.tsx  hero-section.tsx  main-nav.tsx  mobile-nav.tsx  service-demo.tsx  services.tsx  site-footer.tsx  site-header.tsx  tech-stack.tsx  testimonials.tsx
nextjs/src/components/theme/: theme-toggle.tsx
nextjs/src/components/ui/: data-table-column-header.tsx  data-table-faceted-filter.tsx  data-table-pagination.tsx  data-table-view-options.tsx
nextjs/src/config/: nav-links.ts  site-config.ts
nextjs/src/data/: get-calls.ts
nextjs/src/styles/: globals.css  rtl-space.css
nextjs/src/types/: index.ts
predictor/: generate_data.py  meal_prediction_model.ipynb  meal_prediction_models.py  requirements.txt
predictor/models/: lunch_meals_xg.pkl
predictor/sources/: dinner_meal_counts.csv  lunch_meal_counts.csv
