[tool.poetry]
name = "smartfood-backend-api"
version = "0.1.0"
description = "Backend API for SmartFood project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.2"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
google-generativeai = "^0.3.1"
pickle5 = "^0.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
